refactor: assertAll 변경